Updated vibris